atualizando pagina projetos

--- a/projetos.html
+++ b/projetos.html
@@ -19,11 +19,25 @@
 
 
     <main class="principal">
-        <h1>Projetos</h1>
-        <section>
-            <p>Projeto Meu Portifolio</p>
-            <img src="" alt="ProjetoPortifolio">
-        </section>
+        <div class="corpo_projeto">
+            <h1>Projetos</h1>
+            <div class="div_orientacao">
+                <section class="corpo_projeto_section">
+                    <h3>Projeto Sorveteria Vitta</h3>
+                    <video class="video_vitta" width="600" autoplay loop muted>
+                        <source src="assets/video_projeto.mp4">
+                    </video>
+                    <a class="ancora_github" href="https://github.com/">Github</a>
+                </section>
+                <section class="corpo_projeto_section">
+                    <h3>Projeto Sorveteria Vitta</h3>
+                    <video class="video_vitta" width="600" autoplay loop muted>
+                        <source src="assets/video_projeto.mp4">
+                    </video>
+                    <a class="ancora_github" href="https://github.com/">Github</a> 
+            </div>
+            </section>
+        </div>
 
     </main>
 
